# research_Flores

./: .gitignore  README.md
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/include/my_cpp_pkg/: vision_utils.hpp
src/my_cpp_pkg/src/: offb_node.cpp  pbvs_node.cpp  save_image_listener.cpp  vision_utils.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/launch/: start_offb.launch.py
src/my_py_pkg/my_py_pkg/: my_first_node.py  offb_node.py  offb_posvel.py  offb_trayectoria_cuadrada.py  pbvs_node.py  vision_utils.py
